<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="Title">Title</string>
    <string name="illegal">Illegal</string>
    <string name="new_crime">New Crime</string>
    <string name="there_are_no_crimes_you_should_add_one">There are no crimes. You should add one!</string>
    <string name="add_crime">ADD CRIME</string>
    <string name="delete_crime">DELETE CRIME</string>
    <string name="time_sample">11:56</string>
    <string name="date_sample">Wed May 11</string>
    <string name="save_crime">SAVE CRIME</string>
    <string name="choose_suspect">CHOOSE SUSPECT</string>
    <string name="send_crime_report">SEND REPORT</string>
    <string name="crime_report">%1$s!
The crime was discovered on %2$s. %3$s, and %4$s %5$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="is_illegal">It\'s a hard crime. You should call the police!</string>
    <string name="is_legal_without_suspect">It\'s a lite crime. Look for a suspect!</string>
    <string name="is_legal_with_suspect">It\'s a lite crime. You should talk about it with the suspect.</string>
    <string name="call">CALL</string>
    <string name="ok">OK</string>
    <string name="no_image">NO IMAGE</string>
    <string name="crime_photo">Crime photo</string>
    <string name="take_photo">Take photo</string>
    <string name="crime_photo_image_description">Crime photo is set</string>
    <string name="crime_photo_image_not_set">Crime image is not set</string>
</resources>