<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/container_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/no_image_text"
                android:text="NO IMAGE"
                android:gravity="center"
                android:visibility="gone"
                android:layout_width="100dp"
                android:layout_height="100dp"
                tools:visibility="visible"/>

            <ImageView
                android:id="@+id/crime_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="100dp"
                android:layout_height="100dp"
                tools:background="@color/black"
                android:visibility="visible"/>

            <ImageButton
                android:id="@+id/take_photo_button"
                android:tint="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_photo_camera_24"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/title_layout"
            app:layout_constraintStart_toEndOf="@id/crime_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Title"
                android:textAppearance="?attr/textAppearanceHeadline5"/>

            <EditText
                android:id="@+id/crime_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/crime_title_hint"
                android:importantForAutofill="no"
                android:layout_marginTop="@dimen/default_margin_top"
                android:inputType="text" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/details_text"
        app:layout_constraintTop_toBottomOf="@id/container_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"
        android:layout_marginTop="@dimen/default_margin_top"
        android:textAppearance="?attr/textAppearanceHeadline5"/>

    <Button
        app:layout_constraintTop_toBottomOf="@id/details_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/crime_time"
        android:id="@+id/crime_date"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/default_button_height"
        android:layout_marginTop="@dimen/default_margin_top"
        tools:text="@string/date_sample"/>

    <Button
        app:layout_constraintStart_toEndOf="@+id/crime_date"
        app:layout_constraintTop_toTopOf="@id/crime_date"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/crime_time"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/default_button_height"

        tools:text="@string/time_sample"/>

    <CheckBox
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crime_date"
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label" />
    <CheckBox
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crime_solved"
        android:id="@+id/crime_is_criminal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/illegal"/>

    <Button
        android:id="@+id/choose_suspect"
        android:text="@string/choose_suspect"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crime_is_criminal"
        android:layout_marginTop="@dimen/default_margin_top"
        />

    <Button
        android:id="@+id/send_crime_report"
        app:layout_constraintTop_toBottomOf="@id/choose_suspect"
        app:layout_constraintStart_toStartOf="@id/crime_date"
        android:layout_marginTop="@dimen/default_margin_top"
        android:text="@string/send_crime_report"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/default_button_height"/>

    <Button
        android:id="@+id/call_suspect"
        app:layout_constraintEnd_toEndOf="@id/crime_time"
        app:layout_constraintTop_toTopOf="@id/send_crime_report"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/default_button_height"
        android:text="@string/call"
        app:icon="@drawable/ic_baseline_call_24"
        />

    <Button
        android:id="@+id/delete_crime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/send_crime_report"
        app:layout_constraintEnd_toStartOf="@id/update_crime"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/delete_crime"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/default_button_height"
        />

    <Button
        android:id="@+id/update_crime"
        app:layout_constraintStart_toEndOf="@id/delete_crime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/delete_crime"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/default_button_height"
        android:text="@string/save_crime"/>




</androidx.constraintlayout.widget.ConstraintLayout>